Bug 466803 - Haruna doesn't open .TS videos on startup
Summary: Haruna doesn't open .TS videos on startup
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-04 02:17 UTC by Arthur Kasimov
Modified: 2023-03-06 12:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arthur Kasimov 2023-03-04 02:17:05 UTC
SUMMARY
Haruna doesn't play any .TS videos if I open them from a file manager or supply them via command line. No picture, no sound. It basically acts as if no videos were opened at all. However, it does play .TS files well when I use "Open File" from the app itself.

STEPS TO REPRODUCE
1. Download any .TS file, e.g. from https://filesamples.com/formats/ts
2. Try to open the downloaded file via command line: haruna ~/Videos/sample_1280x720_surfing_with_audio.ts

OBSERVED RESULT
Video is not loaded and played.

EXPECTED RESULT
Playback should start upon startup.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux / KDE Plasma on X11
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
This doesn't seem to be related to https://bugs.kde.org/show_bug.cgi?id=464963 I tried different filenames without fancy characters - no luck. The latest version from master also has the same issue.
Comment 1 george fb 2023-03-06 12:35:26 UTC
Git commit 5b02738eb7dd4a49a07aaedb4c7803537ee54024 by George Florea Bănuș.
Committed on 05/03/2023 at 19:29.
Pushed by georgefb into branch 'master'.

playlistmodel: fix file opening

M  +6    -8    src/application.cpp
M  +3    -3    src/application.h
M  +10   -14   src/models/playlistmodel.cpp
M  +1    -1    src/models/playlistmodel.h
M  +2    -2    src/qml/MpvVideo.qml

https://invent.kde.org/multimedia/haruna/commit/5b02738eb7dd4a49a07aaedb4c7803537ee54024