playlistmodel: fix file opening

BUG: 466803