src/models/playlistmodel.h
@@ -88,7 +88,7 @@ Q_SIGNALS:
 
 private:
     Playlist items() const;
-    void getSiblingItems(QString path);
+    void getSiblingItems(QUrl url);
     void getHttpItemInfo(const QString &url, int row);
     Playlist m_playlist;
     int m_playingItem{-1};
